src/ariel-os-macros/tests/ui/task/misspelled_hook_name.stderr
error: unsupported parameter (`autostart`, `peripherals`, `pool_size`, and hooks `usb_builder_hook` are supported)
  --> tests/ui/task/misspelled_hook_name.rs:10:28
   |
10 | #[ariel_os::task(autostart, usb_builder_hooook)]
   |                            ^^^^^^^^^^^^^^^^^^
